bug: name at mobile not visible when link visited in home page fixed

--- a/style/nav.style.css
+++ b/style/nav.style.css
@@ -868,6 +868,10 @@ font-family: Poppins;
 
 @media (min-width: 320px) and (max-width: 480px) {
 
+  .home__page.col__nav a:visited{
+    color: #333;
+  }
+
   .navbar.row__nav{
     margin-top: 5px;
   }
